Fix 404 error on home page and black screen issues on licenses and services pages

--- a/web.config
+++ b/web.config
@@ -3,18 +3,36 @@
     <system.webServer>
         <rewrite>
             <rules>
-                <!-- Remove .html extension from URLs -->
-                <rule name="RemoveHTMLExtension" stopProcessing="true">
-                    <match url="(.*)\.html" />
+                <!-- Redirect root to /home -->
+                <rule name="Redirect root to home" stopProcessing="true">
+                    <match url="^$" />
+                    <action type="Redirect" url="/home" redirectType="Permanent" />
+                </rule>
+                
+                <!-- Map /home to index.html internally -->
+                <rule name="Map home to index.html" stopProcessing="true">
+                    <match url="^home$" />
+                    <action type="Rewrite" url="index.html" />
+                </rule>
+                
+                <!-- Redirect /index.html to /home -->
+                <rule name="Redirect index.html to home" stopProcessing="true">
+                    <match url="^index\.html$" />
+                    <action type="Redirect" url="/home" redirectType="Permanent" />
+                </rule>
+                
+                <!-- Redirect URLs with .html extension to clean URLs -->
+                <rule name="RemoveHTMLExtensions" stopProcessing="true">
+                    <match url="^(.*)\.html$" />
                     <conditions>
                         <add input="{REQUEST_METHOD}" pattern="^GET$" />
                     </conditions>
                     <action type="Redirect" url="{R:1}" redirectType="Permanent" />
                 </rule>
                 
-                <!-- Add .html extension internally -->
-                <rule name="AddHTMLExtension" stopProcessing="true">
-                    <match url="(.*)" />
+                <!-- Internally map clean URLs to .html files -->
+                <rule name="RewriteHTMLExtensions" stopProcessing="true">
+                    <match url="^(.*)$" />
                     <conditions>
                         <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
                         <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
