--- a/.htaccess
+++ b/.htaccess
@@ -3,7 +3,7 @@ RewriteEngine On
 # Redirect root to /home
 RewriteRule ^$ /home [R=301,L]
 
-# Map /home to index.html
+# Map /home to index.html internally without redirection
 RewriteRule ^home$ index.html [L]
 
 # Redirect /index.html to /home
